<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/about_me"
            android:icon="@drawable/about_me"
            android:title="@string/aboutme" />
        <item
            android:id="@+id/my_education"
            android:icon="@drawable/my_education"
            android:title="@string/education" />
        <item
            android:id="@+id/my_course_work"
            android:icon="@drawable/diplom"
            android:title="@string/coursach" />
        <item
            android:id="@+id/my_plans"
            android:icon="@drawable/plans"
            android:title="@string/plans" />
        <item
            android:id="@+id/contacts"
            android:icon="@drawable/contacts"
            android:title="@string/contacts" />
    </group>
</menu>